tests/baselines/reference/multipleDefaultExports02.errors.txt
tests/cases/conformance/es6/modules/m1.ts(2,25): error TS2528: A module cannot have multiple default exports.
tests/cases/conformance/es6/modules/m1.ts(6,25): error TS2528: A module cannot have multiple default exports.


==== tests/cases/conformance/es6/modules/m1.ts (2 errors) ====
    
    export default function foo() {
                            ~~~
!!! error TS2528: A module cannot have multiple default exports.
    
    }
    
    export default function bar() {
                            ~~~
!!! error TS2528: A module cannot have multiple default exports.
    
    }
    
==== tests/cases/conformance/es6/modules/m2.ts (0 errors) ====
    import Entity from "./m1"
    
    Entity();